<resources>
    <string name="app_name">TO-DO</string>
    <string name="todo">TODO</string>
    <string name="to_do_task">To DO TASK</string>
    <string name="todo2" />

    <string name="by">By</string>
    <string name="pradyunya_chunchwar">Pradyunya Chunchwar</string>
    <string name="already_have_an_account">Already Have An Account</string>
    <string name="username" />
    <string name="password">Password</string>
    <string name="email_id">Email ID</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="dont_have_an_account">Dont Have An Account</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="logout">Logout</string>
    <string name="change_profile">Change Profile</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="add">ADD</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
</resources>